--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.0",
-    "redux-thunk":"^3.1.0",
-    "sweetalert2":"^11.14.3",
-    "swiper":"^11.2.4"
+    "redux-thunk": "^3.1.0",
+    "sweetalert2": "^11.14.3",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -41,5 +41,17 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
