Updated frontend with new CORS settings and Stripe URLs and vircelJson

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
   "headers": [
     {
-      "source": "/(.*).js",
+      "source": "/assets/(.*).js",
       "headers": [
         { "key": "Content-Type", "value": "application/javascript" }
       ]
     }
+  ],
+  "redirects": [
+    { "source": "/index.html", "destination": "/" }
   ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
